HTML , CSS, JS File added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Simple Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    hi this is github setup demo
-
-    <p>this is demo 2</p>
+    <header>
+      <h1>Welcome to My Simple Website</h1>
+    </header>
+    <main>
+      <p>This is a demo website created as part of a GitHub setup demonstration.</p>
+    </main>
+    <footer>
+      <p>&copy; 2025 Simple Website</p>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
