form, and formatting

--- a/html/form.html
+++ b/html/form.html
@@ -16,7 +16,7 @@
 
     <form action="">
       <fieldset>
-        <legend>Registeration form</legend>
+        <legend>Registration form</legend>
         <fieldset>
           <legend>personal info</legend>
 
