--- a/javascript/dom-3.html
+++ b/javascript/dom-3.html
@@ -128,11 +128,11 @@
         font-size: 0.8rem;
         color: #777;
       }
-      
+
       .message {
-          margin-top: 1rem;
-          font-size: 1rem;
-          font-weight: 500;
+        margin-top: 1rem;
+        font-size: 1rem;
+        font-weight: 500;
       }
 
       .loader {
@@ -146,8 +146,12 @@
       }
 
       @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
       }
     </style>
   </head>
@@ -188,10 +192,16 @@
         loader.style.display = "block";
 
         try {
-          const response = await fetch(`https://api.github.com/users/${username}`);
+          const response = await fetch(
+            `https://api.github.com/users/${username}`
+          );
 
           if (!response.ok) {
-            throw new Error(response.status === 404 ? "User not found" : "Something went wrong");
+            throw new Error(
+              response.status === 404
+                ? "User not found"
+                : "Something went wrong"
+            );
           }
 
           const data = await response.json();
